--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Netflix Clone</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="main">
-        <nav>
-            <span>
-                <img src="assets/images/logo.svg" alt="Netflix Logo">
-            </span>
-            <div>
-                <button>English</button>
-                <button>Sign In</button>
-            </div>
-        </nav>
+  <div class="main">
+    <nav>
+      <img src="assets/images/logo.svg">
+      <div class="nav-btns">
+        <button class="lang">文A English <span style="font-size:20px;">▼</span>
+</button>
+        <button class="signin">Sign In</button>
+      </div>
+    </nav>
 
-        <div class="box"></div>
+    <div class="hero">
+      <h1>Unlimited movies, shows, and more</h1>
+      <h2>Starts at ₹149. Cancel anytime.</h2>
+      <p>Ready to watch? Enter your email to create or restart your membership.</p>
 
-        <div class="hero">
-            <span>Unlimited movies, shows and more</span>
-            <span>Starts at rupees 149. Cancel at any time.</span>
-            <span>Ready to watch? Enter your email to create or restart your membership.</span>
-            <div class="hero-input">
-                <input type="text" placeholder="Email Address">
-                <button>Get Started ></button>
-            </div>
-        </div>
+      <div class="hero-input">
+        <input type="email" placeholder="Email address">
+        <button>Get Started ></button>
+      </div>
     </div>
-
-    <div class="seperation"></div>
+    <div style="background-color: rgb(63, 57, 57); height:10px;"></div>
+  </div>
 </body>
 </html>
