--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Netflix Clone</title>
+  <title>Netflix India – Watch Shows Online, Watch Movies Online</title>
+  <link rel="icon" href="assets/favicon.ico">
+
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div class="main">
     <nav>
       <img src="assets/images/logo.svg">
       <div class="nav-btns">
         <button class="lang">文A English <span style="font-size:20px;">▼</span>
-</button>
+        </button>
         <button class="signin">Sign In</button>
       </div>
     </nav>
@@ -24,10 +28,26 @@
 
       <div class="hero-input">
         <input type="email" placeholder="Email address">
-        <button>Get Started ></button>
+        <button>Get Started &gt;</button>
       </div>
     </div>
     <div style="background-color: rgb(63, 57, 57); height:10px;"></div>
   </div>
+
+
+  <section>
+        <div>
+            <span>Enjoy on your TV</span>
+            <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
+        </div>
+
+        <div class="secImg">
+            <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
+            <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
+                autoplay loop muted></video>
+        </div>
+    </section>
+
 </body>
+
 </html>
