--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+    <!-- <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title> -->
+         <title>Netflix - UI clone</title>
+
     <link rel="stylesheet" href="/styles.css">
 </head>
 
